--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: build
-        run: docker build -t {{ secrets.DOCKER_NAME }}/skypro:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+        run: docker build -t ${{ secrets.DOCKER_NAME }}/skypro:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
       - name: login
-        run: docker login -u {{ secrets.DOCKER_NAME }} -p {{ secrets.DOCKER_TOKEN }}
+        run: docker login -u ${{ secrets.DOCKER_NAME }} -p ${{ secrets.DOCKER_TOKEN }}
       - name: push
-        run: docker push {{ secrets.DOCKER_NAME }}/skypro:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+        run: docker push ${{ secrets.DOCKER_NAME }}/skypro:$GITHUB_REF_NAME-$GITHUB_RUN_ID
