--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -29,5 +29,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           source: "deploy/docker-compose.yaml"
-          target: "/test_app"
+          target: "test_app"
           strip_components: 1
