--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -1,8 +1,9 @@
 version: '3.3'
 
 services:
-  image: deejeezz/skypro:$GITHUB_REF_NAME-$GITHUB_RUN_ID
-  ports:
-    - "80:80"
-  restart:
-    - always
+  app:
+    image: deejeezz/skypro:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+    ports:
+      - "80:80"
+    restart:
+      - always
