--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -5,5 +5,4 @@ services:
     image: deejeezz/skypro:$GITHUB_REF_NAME-$GITHUB_RUN_ID
     ports:
       - "80:80"
-    restart:
-      - always
+    restart: always
