--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,6 +31,8 @@ jobs:
           source: "deploy/docker-compose.yaml"
           target: "test_app"
           strip_components: 1
+      - name: login
+        run: docker login -u ${{ secrets.DOCKER_NAME }} -p ${{ secrets.DOCKER_TOKEN }}
       - name: run
         uses: appleboy/ssh-action@master
         with:
